--- a/1 - Intro Incident Handling/12.html
+++ b/1 - Intro Incident Handling/12.html
@@ -38,7 +38,7 @@
                             l'attaccante a ridisegnare l'attacco.</li>
                     </ul>
                     <div style="text-align: center; margin-top: 10px;">
-                        <img src="img/ir_mitre.png" alt="Pyramid of Pain" style="max-height: 150px;">
+                        <a href="img/ir_mitre.png" target="_blank"><img src="img/ir_mitre.png" alt="Pyramid of Pain" style="max-height: 150px;"></a>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <p style="margin-top: 10px;">Permette di collaborare, gestire avvisi (alert) e mappare le
                         osservazioni direttamente alle tecniche MITRE ATT&CK.</p>
                     <div style="text-align: center; margin-top: 10px;">
-                        <img src="img/ir_hive.png" alt="TheHive" style="max-height: 150px; border-radius: 4px;">
+                        <a href="img/ir_hive.png" target="_blank"><img src="img/ir_hive.png" alt="TheHive" style="max-height: 150px; border-radius: 4px;"></a>
                     </div>
                 </div>
             </div>
