--- a/1 - Intro Incident Handling/18.html
+++ b/1 - Intro Incident Handling/18.html
@@ -51,7 +51,7 @@
             <div class="card border-purple">
                 <div class="card-title">Confidenzialità</div>
                 <div class="card-text">
-                    <p>Le informazioni devono essere <strong>Need-to-know</strong>. L'attaccante potrebbe essere un
+                    <p>Le informazioni devono essere <span title="Principio secondo cui l'accesso alle informazioni è concesso solo a coloro che ne hanno strettamente bisogno per svolgere un compito specifico, specialmente durante la gestione di un incidente, per limitare la diffusione di dati sensibili e prevenire fughe di notizie."><strong>Need-to-know</strong></span>. L'attaccante potrebbe essere un
                         insider o avere accesso alle email aziendali.</p>
                 </div>
             </div>
