--- a/1 - Intro Incident Handling/19.html
+++ b/1 - Intro Incident Handling/19.html
@@ -42,9 +42,13 @@
             <div class="card border-yellow">
                 <div class="card-title">Standardizzazione</div>
                 <div class="card-text">
-                    <p>Gli IOC possono essere condivisi usando formati standard come <strong>STIX</strong> (JSON) o
-                        regole <strong>YARA</strong>.</p>
-                    <p class="tech-term">OpenIOC, STIX, TAXII</p>
+                    <p>Gli IOC possono essere condivisi usando formati standard come <strong title="Un linguaggio strutturato in JSON per descrivere le minacce informatiche in modo standardizzato e condivisibile.">STIX</strong> (JSON) o
+                        regole <strong title="Uno strumento per creare descrizioni di famiglie di malware (basate su pattern testuali o binari) e scansionare file o memoria per identificarle.">YARA</strong>.</p>
+                    <p class="tech-term">
+                        <span title="Uno standard XML per descrivere gli indicatori di compromissione in modo strutturato, facilitando la condivisione e l'automazione.">OpenIOC</span>, 
+                        <span title="Un linguaggio strutturato in JSON per descrivere le minacce informatiche in modo standardizzato e condivisibile.">STIX</span>, 
+                        <span title="Un protocollo standard per lo scambio sicuro e automatizzato di informazioni sulle minacce informatiche (spesso usato per trasportare dati STIX).">TAXII</span>
+                    </p>
                 </div>
             </div>
         </div>
