--- a/3 - Threat Hunting/5.html
+++ b/3 - Threat Hunting/5.html
@@ -30,16 +30,26 @@
             <div class="card border-red">
                 <div class="card-title">Nuova Threat Intelligence</div>
                 <div class="card-text">
-                    <p>Scoperta di una nuova vulnerabilità critica o di un nuovo gruppo APT che targettizza il nostro
-                        settore.</p>
+                    <p>Scoperta di una nuova vulnerabilità critica o di un
+                        <span class="tech-term"
+                            title="Es: Vulnerabilità come Log4Shell, Follina; Gruppi come Lazarus, FIN7.">
+                            nuovo gruppo APT
+                        </span>
+                        che targettizza il nostro settore.
+                    </p>
                 </div>
             </div>
 
             <div class="card border-blue">
                 <div class="card-title">Anomalie Multiple</div>
                 <div class="card-text">
-                    <p>Diversi "glitch" o eventi strani che, presi singolarmente sembrano innocui, ma insieme
-                        suggeriscono un pattern.</p>
+                    <p>Diversi "glitch" o
+                        <span class="tech-term"
+                            title="Es: Esecuzione di PowerShell su un web server, picco di traffico di rete in orario notturno, accessi falliti da geolocalizzazioni anomale.">
+                            eventi strani
+                        </span>
+                        che, presi singolarmente sembrano innocui, ma insieme suggeriscono un pattern.
+                    </p>
                 </div>
             </div>
         </div>
@@ -47,8 +57,13 @@
         <div class="card border-green" style="margin-top: 20px;">
             <div class="card-title">Durante Incident Response</div>
             <div class="card-text">
-                <p>Mentre l'IR gestisce un incendio, il Hunter controlla se le scintille sono volate altrove. Es:
-                    "Abbiamo trovato malware sul PC A, è presente anche sui server B e C?"</p>
+                <p>Mentre l'IR gestisce un incendio, il Hunter
+                    <span class="tech-term"
+                        title="Es: L'attaccante ha usato le credenziali X sulla macchina Y. La stessa credenziale è stata usata per accedere ad altri sistemi?">
+                        controlla se le scintille sono volate altrove
+                    </span>.
+                    Es: "Abbiamo trovato malware sul PC A, è presente anche sui server B e C?"
+                </p>
             </div>
         </div>
     </div>
